test/badCallLhs.slq

def foo(const a:ğ”¹,b:ğ”¹)=>b;

def main(){
	foo(1,x):=0:ğ”¹; // error
}
